# fehdb

./: .claudeignore  .gitignore  CLAUDE.md  PROGRESS.md  create_hero_infos.py  create_skill_info.py  fe-blazing-blade.sqlite3  fe-char-birthdays.tsv  fe-shadows.sqlite3  fe-the-sacred-stones.sqlite3  fe-three-houses.sqlite3  fe-title-birthdays.tsv  feh-cyl.sqlite3  feh-gacha.sqlite3  feh-heroes.sqlite3  feh-original_heroes.sqlite3  feh-skills.sqlite3  feh-staff.sqlite3  feh-story.sqlite3  feh.sqlite3  pyproject.toml  replace.py  run.sh  update-birtyday-tsv.bat  update-cyl-vote.bat  update-story-dialogs.bat  update-story-dialogs.query
dumps/: feh-heroes.csv  (+4 more)
scripts/extract_from_video/: README.md  card_crop.py  download.py  formatter.py  frames.py  line_merger.py  local_ocr.py  main.py  models.py  ocr.py  ocr_claude.py  ocr_gemini.py  ocr_ollama.py  pyproject.toml  run.sh  setup-ollama.sh  validate_line_merger.py  verify_crop_rows.py  verify_edge_detection.py  weapon_type.py
scripts/extract_from_video/data/: README.md
scripts/extract_from_video/data/09-01-06/annotations/: hero_frame_labels.json
scripts/extract_from_video/data/09-05-07/annotations/: hero_frame_labels.json
scripts/extract_from_video/docs/: hero_detection_grid_search.md  tuning.md
scripts/extract_from_video/docs/issues/: exclamation-mark-detection.md  freeze-duration-threshold.md
scripts/extract_from_video/tuning/: extract_all_frames.py  verify_card_crop.py  verify_crop_rows.py  verify_edge_detection.py  verify_hero_detection.py  verify_ocr_crop.py  verify_ocr_prompts.py  verify_weapon_detection.py
(+151 files in other folders)
