[project]
name = "fehdb"
version = "0.1.0"
description = "Fire Emblem Heroes database scripts"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "unidecode>=1.3.8",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "scripts/update_skill_description",
    "scripts/extract_from_video",
]
